--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds004215.git
+	datalad-id = 0b255ee0-784b-4770-b66a-96dff03353d1
+	datalad-url = https://github.com/OpenNeuroDatasets/ds004215.git
